# AirSpaceSim

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  airspacesim_architecture_and_product_direction.md  config.json  dashboard.html  dev_server.py  docker-compose.yml  documentation.md  intent.toml  justfile  pre-roadmap.md  pyproject.toml  regenerate_dist.bat  requirements-dev.txt  roadmap.md  setup.py  sim_ui.md  test1.text  test2.txt
AirSpaceSim.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
airspacesim/: __init__.py  dev_server.py  hello.py  settings.py
airspacesim_fable5_brief/: 00_MASTER_PROMPT.md  02_TARGET_ARCHITECTURE.md  08_REPOSITORY_AUDIT_PROMPT.md  09_DOCUMENTATION_AND_DEVELOPER_EXPERIENCE.md  README.md  REFERENCE_architecture_and_product_direction.md  airspacesim_architecture_and_product_direction.md
apps/api/: .env.example  Dockerfile  alembic.ini  docker-entrypoint.sh  pyproject.toml
apps/api/app/: __init__.py  airspace_packages.py  config.py  dependencies.py  limits.py  logging_config.py  main.py  middleware.py  paths.py  security.py  session_identity.py
apps/api/app/api/: __init__.py
apps/api/app/api/v1/routes/: __init__.py  airspaces.py  auth.py  commands.py  content.py  health.py  progress.py  runs.py  scenarios.py
apps/api/app/db/: __init__.py  base.py  session.py
apps/api/app/db/migrations/: README.md  env.py
apps/api/app/db/migrations/versions/: 20260511_0001_initial_sqlite_baseline.py  20260511_0002_run_checkpoints.py  20260708_0003_add_session_scoping.py  20260716_0004_add_run_summary.py  20260718_0001_initial_baseline.py
apps/api/app/db/models/: __init__.py  checkpoint.py  command.py  run.py  scenario.py  user.py
apps/api/app/db/repositories/: __init__.py  checkpoints.py  commands.py  runs.py  scenarios.py
apps/api/app/schemas/: __init__.py  airspaces.py  auth.py  commands.py  common.py  health.py  runs.py  scenarios.py
apps/api/app/services/: __init__.py  airspaces.py  auth.py  practice_runs.py  retention.py  runs.py  scenarios.py
apps/api/app/sessions/: __init__.py  practice.py  registry.py  runtime.py
apps/api/app/ws/: __init__.py  hub.py
apps/api/tests/: __init__.py  conftest.py  test_app.py  test_auth.py  test_content.py  test_dependencies.py  test_health.py  test_migrations.py  test_practice_run_validation.py  test_progress.py  test_repositories.py  test_retention.py  test_run_summaries.py  test_runs.py  test_scenarios.py  test_services.py  test_session_identity.py  test_sessions.py  test_ws.py
content/: curriculum.v1.json
docs/: architecture.md  compatibility-matrix.md  data-contracts.md  failure-modes.md  file-contracts.md  glossary.md  index.md  ingestion.md  interoperability-example.md  migration.md  release-checklist.md  timeline.md  tutorial.md
scripts/: offline_editable_install.py  seed_dev_user.py  seed_hosted_demo.py  smoke_hosted_app.py  start_hosted_dev.py  validate_airspace_package.py
tests/: conftest.py  test_aircraft.py  test_aircraft_manager_lifecycle.py  test_aircraft_state_contract.py  test_browser_console_clean.py  test_cli_init.py  test_contracts_and_adapters.py  test_conversions.py  test_core_domain.py  test_docs_quickstart.py  test_engine_stepping.py  test_framework_agnostic_core.py  test_hosted_browser_flow.py  test_integration.py  test_offline_editable_install.py  test_performance_tools.py  test_phase1_clean_run.py  test_route_processor.py  test_route_registry.py  test_schemas.py  test_settings.py  (+6 more)
(+230 files in other folders)
