[project]
name = "airspacesim-api"
version = "0.2.0"
description = "FastAPI service layer for AirSpaceSim."
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic-settings>=2.2",
  "sqlalchemy>=2.0",
  "alembic>=1.13",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27",
  "pytest>=8.0",
]
postgres = [
  "psycopg2-binary>=2.9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
